--- a/base.html
+++ b/base.html
@@ -62,7 +62,7 @@
             poems and stories and even tried my hand at writing <br>
             and directing a couple of theatre plays<br>
             and short movies.
-            I strongly believe that to be happy, we’ve to make <br>
+            I strongly believe that to be happy, we have to make <br>
             our surroundings happy. And following my<br>
             heart, I’ve always tried to be a helping hand for the <br>
             needy through social work.
