--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         
     </div>
     <div class = "about" id = "ABOUT">
-        <img id = "contact_image" class = "image" src = "/images/contactbg.jpg">
+        <img id = "contact_image" class = "image" src = "images/contactbg.jpg">
         <div id = "contactcontent"class = "about-content">
             <p>
             <h2><b>Contact.</b></h2>
